--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               I'm a final year undergraduate, currently pursuing a major in Information Science & Engineering from HKBK
               College of Engineering (HKBK), Bengaluru. <br><br>
             </p>
-            <a href="https://drive.google.com/file/d/1LpNEgAKQ6QotvJVb5GT_V8AyPwRhI8KT/view?usp=drivesdk" target="_blank"
+            <a href="https://drive.google.com/file/d/1tMhSVUTvD0HIci5jGYpHin3Xu-etcORk/view?usp=sharing" target="_blank"
               class="special">See Resume</a>
             <a href="#footer" class="special">Get in touch</a>
           </div>
@@ -198,7 +198,7 @@ choices.
                   <tr>
                     <td>B.E. (Information Science & Engineering)</td>
                     <td>HKBK College of Engineering, Bengaluru</td>
-                    <td>7.5 CGPA (Till 6th Semester)</td>
+                    <td>7.5 CGPA (Till 7th Semester)</td>
                     <td>2024</td>
                   </tr>
                   <tr>
