--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               I'm a final year undergraduate, currently pursuing a major in Information Science & Engineering from HKBK
               College of Engineering (HKBK), Bengaluru. <br><br>
             </p>
-            <a href="https://drive.google.com/file/d/1Agc0wJQ5l3U0u22RuW7BmrVQenCx7Krk/view?usp=sharing"
+            <a href="https://drive.google.com/file/d/1Agc0wJQ5l3U0u22RuW7BmrVQenCx7Krk/view?usp=sharing" target="_blank"
               class="special">See Resume</a>
             <a href="#footer" class="special">Get in touch</a>
           </div>
