--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           <div class="content">
             <h2 class="major">About Me</h2>
             <p>
-              I'm a final year undergraduate, currently pursuing a major in Information Science & Engineering from HKBK
-              College of Engineering (HKBK), Bengaluru. <br><br>
+              I have successfully completed my engineering degree with a major in Information Science & Engineering
+	from HKBK College of Engineering in Bengaluru. <br><br>
             </p>
             <a href="https://drive.google.com/file/d/1Agc0wJQ5l3U0u22RuW7BmrVQenCx7Krk/view" target="_blank"
               class="special">See Resume</a>
@@ -138,8 +138,9 @@ choices.
               src="https://th.bing.com/th/id/R.740b83a8a2e0e344542ac88ea8be622c?rik=7C73KkfEcBj8dQ&riu=http%3a%2f%2fwww.dialogue.center%2fwp-content%2fuploads%2fiot_1.gif&ehk=trh87lbrLgosb8NvlMwFOXQswNMk7Xu%2fzUXVDErZlt4%3d&risl=&pid=ImgRaw&r=0" alt="" /></a>
           <h3 class="major">IOT Project with Implementation</h3>
           <p>
-            Engineered an IOT-based solution for an irrigation system. Monitored soil water temperature to optimize water supply to fields within 
-            defined time constraints. Effectively addressed real-time challenges faced by farmers
+            Developed an IoT-powered surveillance robot specifically for remote areas, featuring both autonomous and manual control capabilities,
+		  as well as advanced camouflage techniques. This innovative solution minimizes human presence in hostile environments by detecting humans,
+		  explosives, and gases, and issuing real-time alerts for any suspicious activities.
           </p>
 
           
