--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h2 class="major">About Me</h2>
             <p>
               I have successfully completed my engineering degree with a major in Information Science & Engineering
-	from HKBK College of Engineering in Bengaluru. <br><br>
+	from HKBK College of Engineering in Bengaluru. <br></br>
             </p>
             <a href="https://drive.google.com/file/d/1Agc0wJQ5l3U0u22RuW7BmrVQenCx7Krk/view" target="_blank"
               class="special">See Resume</a>
