--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               I have successfully completed my engineering degree with a major in Information Science & Engineering
 	from HKBK College of Engineering in Bengaluru. <br></br>
             </p>
-            <a href="https://drive.google.com/file/d/1Kg14eY057aQIpaHJc2zyvy4SuAa-7sKk/view?usp=sharing" target="_blank"
+            <a href="https://drive.google.com/file/d/1Kg14eY057aQIpaHJc2zyvy4SuAa-7sKk/view" target="_blank"
               class="special">See Resume</a>
             <a href="#footer" class="special">Get in touch</a>
           </div>
