--- a/index.html
+++ b/index.html
@@ -115,8 +115,10 @@
               src="https://media.giphy.com/media/xTiTnjZAjQipGn9JFS/200.gif" alt="" /></a>
           <h3 class="major">File Structure Mini Project Mini Project</h3>
           <p>
-            Designed and executed a Voter ID Management System using B+ Tree Indexing Technique. Developed a robust project enabling
-            operations like Insertion, Deletion Search, Modification, and B+ Tree Indexing.
+            Designed and executed a Voter ID Management System using the B+ Tree Indexing Technique for efficient data retrieval.
+Developed a robust system supporting Insertion, Deletion, Search, Modification, and Indexing operations with optimized query performance.
+Implemented secure authentication and error handling mechanisms to ensure data integrity and prevent unauthorized access.
+Designed a user-friendly interface for seamless interaction and real-time updates on voter information.
           </p>
     <a href="https://github.com/ashishrana4710/voter_id_management_system_using_indexing" target="_blank" class="special">Learn
             more</a>
