--- a/index.html
+++ b/index.html
@@ -147,7 +147,18 @@ choices.
 		  as well as advanced camouflage techniques. This innovative solution minimizes human presence in hostile environments by detecting humans,
 		  explosives, and gases, and issuing real-time alerts for any suspicious activities.
           </p>
-
+        </article>
+		  <article>
+          <a target="_blank" class="image"><img
+              src="https://media.tenor.com/DxeK02KwNbEAAAAd/java-python.gif" alt="" /></a>
+          <h3 class="major">Placement Management System (Java)</h3>
+          <p>
+Built a backend Java-based Placement Management System to streamline recruitment processes. Integrated automated student profiling, 
+		  job matching, and role-based access control for enhanced efficiency. 
+		  Designed a centralized database with real-time notifications and status tracking for job applications. 🚀
+          </p>
+    <a href="https://github.com/ashishrana4710/Placement_Management_System_Backened" target="_blank" class="special">Learn
+            more</a>
           
         </article>
      </section>
